tests/machine/x/c/map_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_assign.c:87:27: error: invalid initializer
   87 |   map_string_int scores = (tmp_item_t){.alice = 1};
      |                           ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
